# SIRENO-lite

./: .gitignore  GUI_BUILD.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: build_gui.yml  docs.yml  tests.yml
docs/: api.md  example-usage.md  getting-started.md  index.md  theory.md  troubleshooting.md
scripts/: build_gui_linux.sh  build_gui_mac.sh  build_gui_windows.ps1  generate_coverage_badge.py
sirenolite/: __main__.py  cli.py  gui.py  model.py
sirenolite/data/: load_resource_data.csv  sirenolite_config.json
tests/: conftest.py  test_cli.py  test_model.py
